shocktube error and inception and adsorption contribution added

--- a/Includes/Bibliography/_ref_1900s.bib
+++ b/Includes/Bibliography/_ref_1900s.bib
@@ -84,3 +84,14 @@
   journal={New York},
   year={1964}
 }
+
+@article{berger1977mass,
+  title={Mass transfer in turbulent pipe flow measured by the electrochemical method},
+  author={Berger, FP and Hau, K-FF-L},
+  journal={International Journal of Heat and Mass Transfer},
+  volume={20},
+  number={11},
+  pages={1185--1194},
+  year={1977},
+  publisher={Elsevier}
+}
