--- a/Includes/Bibliography/_ref_2005.bib
+++ b/Includes/Bibliography/_ref_2005.bib
@@ -74,3 +74,14 @@
   year={2005},
   publisher={Elsevier}
 }
+
+@article{d2005surface,
+  title={Surface deposition and coagulation efficiency of combustion generated nanoparticles in the size range from 1 to 10 nm},
+  author={D’Alessio, Antonio and Barone, AC and Cau, R and D’Anna, Andrea and Minutolo, P},
+  journal={Proceedings of the Combustion Institute},
+  volume={30},
+  number={2},
+  pages={2595--2603},
+  year={2005},
+  publisher={Elsevier}
+}
