--- a/Includes/Bibliography/_ref_2011.bib
+++ b/Includes/Bibliography/_ref_2011.bib
@@ -72,3 +72,13 @@
   year={2011},
   publisher={Springer}
 }
+
+@article{agafonov2011soot,
+  title={Soot formation in the pyrolysis of benzene, methylbenzene, and ethylbenzene in shock waves},
+  author={Agafonov, GL and Vlasov, PA and Smirnov, VN},
+  journal={Kinetics and Catalysis},
+  volume={52},
+  pages={358--370},
+  year={2011},
+  publisher={Springer}
+}
