--- a/Includes/Bibliography/_ref_2020.bib
+++ b/Includes/Bibliography/_ref_2020.bib
@@ -83,3 +83,13 @@
   year={2020},
   publisher={Elsevier}
 }
+
+@article{hou2020coagulation,
+  title={On the coagulation efficiency of carbonaceous nanoparticles},
+  author={Hou, Dingyu and Zong, Diyuan and Lindberg, Casper S and Kraft, Markus and You, Xiaoqing},
+  journal={Journal of Aerosol Science},
+  volume={140},
+  pages={105478},
+  year={2020},
+  publisher={Elsevier}
+}
