--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -84,6 +84,17 @@
   journal={New York},
   year={1964}
 }
+
+@article{berger1977mass,
+  title={Mass transfer in turbulent pipe flow measured by the electrochemical method},
+  author={Berger, FP and Hau, K-FF-L},
+  journal={International Journal of Heat and Mass Transfer},
+  volume={20},
+  number={11},
+  pages={1185--1194},
+  year={1977},
+  publisher={Elsevier}
+}
 @article{Oberlin1984,
    author = {A Oberlin},
    issn = {0008-6223},
@@ -320,6 +331,28 @@
   pages={196--218},
   year={1951},
   publisher={The Royal Society London}
+}
+
+@inproceedings{lee1981optical,
+  title={Optical constants of soot in hydrocarbon flames},
+  author={Lee, SC and Tien, CL},
+  booktitle={Symposium (international) on combustion},
+  volume={18},
+  number={1},
+  pages={1159--1166},
+  year={1981},
+  organization={Elsevier}
+}
+
+@article{narsimhan1985brownian,
+  title={The Brownian coagulation of aerosols over the entire range of Knudsen numbers: Connection between the sticking probability and the interaction forces},
+  author={Narsimhan, Ganesan and Ruckenstein, Eli},
+  journal={Journal of colloid and interface science},
+  volume={104},
+  number={2},
+  pages={344--369},
+  year={1985},
+  publisher={Elsevier}
 }
 @inproceedings{frenklach1991detailed,
   title={Detailed modeling of soot particle nucleation and growth},
@@ -636,6 +669,17 @@
   year={1993},
   publisher={Elsevier}
 }
+
+@article{wang1991filtration,
+  title={Filtration efficiency of nanometer-size aerosol particles},
+  author={Wang, Hwa-Chi and Kasper, Gerhard},
+  journal={Journal of Aerosol Science},
+  volume={22},
+  number={1},
+  pages={31--41},
+  year={1991},
+  publisher={Elsevier}
+}
 @article{appel2000kinetic,
   title={Kinetic modeling of soot formation with detailed chemistry and physics: laminar premixed flames of C2 hydrocarbons},
   author={Appel, J{\"o}rg and Bockhorn, Henning and Frenklach, Michael},
@@ -846,6 +890,17 @@
   volume={142},
   number={4},
   pages={364--373},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{d2005surface,
+  title={Surface deposition and coagulation efficiency of combustion generated nanoparticles in the size range from 1 to 10 nm},
+  author={D’Alessio, Antonio and Barone, AC and Cau, R and D’Anna, Andrea and Minutolo, P},
+  journal={Proceedings of the Combustion Institute},
+  volume={30},
+  number={2},
+  pages={2595--2603},
   year={2005},
   publisher={Elsevier}
 }
@@ -1225,6 +1280,16 @@
   volume={104},
   number={2},
   pages={297--305},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{agafonov2011soot,
+  title={Soot formation in the pyrolysis of benzene, methylbenzene, and ethylbenzene in shock waves},
+  author={Agafonov, GL and Vlasov, PA and Smirnov, VN},
+  journal={Kinetics and Catalysis},
+  volume={52},
+  pages={358--370},
   year={2011},
   publisher={Springer}
 }
@@ -2046,6 +2111,16 @@
   year={2020},
   publisher={Elsevier}
 }
+
+@article{hou2020coagulation,
+  title={On the coagulation efficiency of carbonaceous nanoparticles},
+  author={Hou, Dingyu and Zong, Diyuan and Lindberg, Casper S and Kraft, Markus and You, Xiaoqing},
+  journal={Journal of Aerosol Science},
+  volume={140},
+  pages={105478},
+  year={2020},
+  publisher={Elsevier}
+}
 @article{gleason2021small,
   title={Small aromatic hydrocarbons control the onset of soot nucleation},
   author={Gleason, Kevin and Carbone, Francesco and Sumner, Andrew J and Drollette, Brian D and Plata, Desiree L and Gomez, Alessandro},
@@ -2162,6 +2237,17 @@
   journal={Combustion and Flame},
   volume={226},
   pages={31--41},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{michelsen2021effects,
+  title={Effects of maturity and temperature on soot density and specific heat},
+  author={Michelsen, Hope A},
+  journal={Proceedings of the Combustion Institute},
+  volume={38},
+  number={1},
+  pages={1197--1205},
   year={2021},
   publisher={Elsevier}
 }
