--- a/Includes/Bibliography/_ref_1980s.bib
+++ b/Includes/Bibliography/_ref_1980s.bib
@@ -235,3 +235,25 @@
   year={1951},
   publisher={The Royal Society London}
 }
+
+@inproceedings{lee1981optical,
+  title={Optical constants of soot in hydrocarbon flames},
+  author={Lee, SC and Tien, CL},
+  booktitle={Symposium (international) on combustion},
+  volume={18},
+  number={1},
+  pages={1159--1166},
+  year={1981},
+  organization={Elsevier}
+}
+
+@article{narsimhan1985brownian,
+  title={The Brownian coagulation of aerosols over the entire range of Knudsen numbers: Connection between the sticking probability and the interaction forces},
+  author={Narsimhan, Ganesan and Ruckenstein, Eli},
+  journal={Journal of colloid and interface science},
+  volume={104},
+  number={2},
+  pages={344--369},
+  year={1985},
+  publisher={Elsevier}
+}
