--- a/Includes/Bibliography/_ref_1990s.bib
+++ b/Includes/Bibliography/_ref_1990s.bib
@@ -313,3 +313,14 @@
   year={1993},
   publisher={Elsevier}
 }
+
+@article{wang1991filtration,
+  title={Filtration efficiency of nanometer-size aerosol particles},
+  author={Wang, Hwa-Chi and Kasper, Gerhard},
+  journal={Journal of Aerosol Science},
+  volume={22},
+  number={1},
+  pages={31--41},
+  year={1991},
+  publisher={Elsevier}
+}
