--- a/Includes/Bibliography/_ref_2021.bib
+++ b/Includes/Bibliography/_ref_2021.bib
@@ -117,3 +117,14 @@
   year={2021},
   publisher={Elsevier}
 }
+
+@article{michelsen2021effects,
+  title={Effects of maturity and temperature on soot density and specific heat},
+  author={Michelsen, Hope A},
+  journal={Proceedings of the Combustion Institute},
+  volume={38},
+  number={1},
+  pages={1197--1205},
+  year={2021},
+  publisher={Elsevier}
+}
